--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,11 @@
 [project]
-name = "centrifugo"
+name = "centrifugo-cluster-demo"
 version = "0.1.0"
-description = "Add your description here"
-requires-python = ">=3.9"
+description = "Stateless LLM emulator with Centrifugo cluster for WebSocket streaming"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.124.2",
-    "uvicorn>=0.38.0",
     "httpx>=0.27.0",
-    "aiocent>=4.1.2",
     "websockets>=15.0.1",
     "uvloop>=0.22.1",
     "pyjwt>=2.8.0",
