--- a/centrifugo/config_node2.json
+++ b/centrifugo/config_node2.json
@@ -17,9 +17,17 @@
   "grpc_api": false,
 
   "allow_subscribe_for_client": true,
+
+  "client_stale_close_delay": "300s",
+  "client_expired_close_delay": "300s",
+  "client_presence_ping_interval": "60s",
+  "client_channel_position_check_delay": "120s",
+
   "namespaces": [
     {
-      "name": "session"
+      "name": "session",
+      "history_size": 100,
+      "history_ttl": 300
     }
   ]
 }
