--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -4,9 +4,10 @@ global
 
 defaults
     mode http
-    timeout connect 5s
-    timeout client 60s
-    timeout server 60s
+    timeout connect 10s
+    timeout client 300s
+    timeout server 300s
+    timeout tunnel 3600s
     log global
 
 # Statistics endpoint
