Sync configs and scripts for current cluster and tooling

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ build/
 # Logs
 *.log
 logs/
+.diagnostic/
 
 # Redis data
 redis_data/
@@ -68,3 +69,4 @@ htmlcov/
 *.tmp
 *.bak
 /CLAUDE.md
+/AGENTS.md
