--- a/centrifugo/config.json
+++ b/centrifugo/config.json
@@ -1,21 +1,64 @@
 {
-  "v3_use_offset": true,
+  "admin": {
+    "enabled": true,
+    "password": "admin",
+    "secret": "admin-secret"
+  },
 
-  "admin": true,
-  "admin_password": "admin",
-  "admin_secret": "admin-secret",
+  "http_api": {
+    "key": "super-secret-api-key"
+  },
 
-  "api_key": "super-secret-api-key",
+  "client": {
+    "token": {
+      "hmac_secret_key": "super-secret-jwt-key"
+    },
+    "allowed_origins": ["*"],
+    "queue_max_size": 1048576,
+    "stale_close_delay": "300s",
+    "expired_close_delay": "300s",
+    "channel_position_check_delay": "90s"
+  },
 
-  "token_hmac_secret_key": "super-secret-jwt-key",
+  "websocket": {
+    "compression": true,
+    "compression_min_size": 1024
+  },
 
-  "allowed_origins": [
-    "*"
-  ],
+  "engine": {
+    "type": "redis",
+    "redis": {
+      "address": "redis:6379"
+    }
+  },
 
-  "engine": "redis",
-  "redis_address": "redis:6379",
+  "prometheus": {
+    "enabled": true
+  },
 
-  "log_level": "info",
-  "grpc_api": false
+  "log": {
+    "level": "info"
+  },
+
+  "grpc_api": {
+    "enabled": false
+  },
+
+  "channel": {
+    "namespaces": [
+      {
+        "name": "session",
+        "history_size": 1000,
+        "history_ttl": "300s",
+        "force_recovery": true,
+        "force_positioning": true,
+        "force_push_join_leave": false,
+        "presence": false,
+        "join_leave": false,
+        "allow_subscribe_for_anonymous": false,
+        "allow_publish_for_subscriber": false,
+        "allow_publish_for_anonymous": false
+      }
+    ]
+  }
 }
