--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,14 +1,28 @@
 global
-    maxconn 100000
+    maxconn 200000
     log stdout format raw local0 info
+    stats socket :9999 level admin expose-fd listeners
+    stats timeout 30s
+
+    tune.bufsize 32768
+    tune.maxrewrite 8192
+    tune.http.maxhdr 100
 
 defaults
     mode http
-    timeout connect 10s
-    timeout client 300s
-    timeout server 300s
-    timeout tunnel 3600s
+    timeout connect 5s
+    timeout client 600s
+    timeout server 600s
+    timeout tunnel 7200s
+    timeout http-request 10s
+    timeout http-keep-alive 60s
+    timeout queue 30s
     log global
+    option httplog
+    option dontlognull
+    option http-server-close
+    option redispatch
+    retries 3
 
 # Statistics endpoint
 listen stats
@@ -16,27 +30,51 @@ listen stats
     stats enable
     stats uri /stats
     stats refresh 10s
+    stats show-legends
+    stats show-node
 
 # Backend for FastAPI instances (stateless HTTP API)
 backend fastapi_backend
     balance roundrobin
     option httpchk GET /health
     http-check expect status 200
-    server granian1 granian1:8001 check inter 2s
-    server granian2 granian2:8002 check inter 2s
+
+    default-server inter 5s rise 2 fall 3 maxconn 5000 maxqueue 1000
+
+    server granian1 granian1:8001 check
+    server granian2 granian2:8002 check
+    server granian3 granian3:8003 check
+    server granian4 granian4:8004 check
 
 # Backend for Centrifugo instances (persistent WebSocket connections)
 backend centrifugo_backend
     balance leastconn
-    server centrifugo1 centrifugo_node1:8100 check inter 2s
-    server centrifugo2 centrifugo_node2:8200 check inter 2s
+
+    option httpchk GET /
+    http-check expect status 200
+
+    default-server inter 10s rise 2 fall 3 maxconn 30000 maxqueue 5000
+
+    server centrifugo1 centrifugo_node1:8100 check
+    server centrifugo2 centrifugo_node2:8200 check
+    server centrifugo3 centrifugo_node3:8300 check
 
 # Frontend for FastAPI HTTP API
 frontend fastapi_frontend
     bind *:9000
     default_backend fastapi_backend
 
+    maxconn 10000
+
+    option forwardfor
+    http-request set-header X-Forwarded-Proto http
+
 # Frontend for Centrifugo WebSocket and HTTP API
 frontend centrifugo_frontend
     bind *:9001
     default_backend centrifugo_backend
+
+    maxconn 80000
+
+    option forwardfor
+    http-request set-header X-Forwarded-Proto ws
