--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 description = "Stateless LLM emulator with Centrifugo cluster for WebSocket streaming"
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi>=0.124.2",
+    "fastapi>=0.124.4",
     "httpx>=0.27.0",
     "websockets>=15.0.1",
     "uvloop>=0.22.1",
     "pyjwt>=2.8.0",
     "granian>=1.7.0",
     "numpy>=1.26.0",
+    "centrifuge-python>=0.4.2",
 ]
