--- a/typescript-client/package.json
+++ b/typescript-client/package.json
@@ -8,13 +8,14 @@
     "build": "tsc"
   },
   "dependencies": {
-    "ws": "^8.16.0",
-    "jsonwebtoken": "^9.0.2"
+    "centrifuge": "^5.5.3",
+    "jsonwebtoken": "^9.0.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.0",
     "@types/ws": "^8.5.10",
-    "@types/jsonwebtoken": "^9.0.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
