--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -4,6 +4,9 @@ global
     stats socket :9999 level admin expose-fd listeners
     stats timeout 30s
 
+    nbthread 4
+    cpu-map auto:1/1-4 0-3
+
     tune.bufsize 32768
     tune.maxrewrite 8192
     tune.http.maxhdr 100
